// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsList Component renders contacts if items prop exists 1`] = `
<div
  className="list-group list-group--contacts-list"
>
  <div
    className="list-group__item list-group__item--contact"
  >
    <p />
    <p
      className="list-group__contact-numbers"
    />
  </div>
</div>
`;

exports[`ContactsList Component renders empty div if no items exist 1`] = `
<div
  className="list-group list-group--contacts-list"
/>
`;
